# indian-curry.github.io

./: .travis.yml  Config.hs  LICENSE  README.md  about.html  about.rst  archive.html  contact.html  contact.markdown  index.html  index.md  site.hs  stack.yaml  website.cabal
Website/: News.hs  Utils.hs
about/: index.html
archive/: index.html  index.md
contact/: index.html
css/: carousel.css  default.css
news/: index.html
news/feeds/: atom.xml
news/posts/: 2016-08-29-Announcing-Indian-Curry.markdown  2017-02-15-Announcing-Indian-Curry.markdown
news/posts/2016-08-29-Announcing-Indian-Curry/: index.html
news/posts/2017-02-15-Announcing-Indian-Curry/: index.html
posts/: 2015-08-23-example.html  2016-08-29-Announcing-Indian-Curry.markdown  2016-08-29-Indian-Curry.html  2016-08-29-Indian-Curry.markdown
posts/2016-08-29-Announcing-Indian-Curry/: index.html
posts/2016-08-29-Indian-Curry/: index.html
scripts/: deploy.sh
templates/: archive.html  default.html  footer.html  navigation.html  news-list.html  post-list.html  post.html  wrapper.html
templates/root/: news-list.html  page-header.html  post-list.html  social.html
