name:                website
version:             0.1.0.0
synopsis:            Hakyll project template from stack
description:         Please see README.md
homepage:            https://github.com/indian-curry/website#readme
license:             BSD3
license-file:        LICENSE
author:              Indian Curry
maintainer:          ppk@cse.iitk.ac.in
copyright:           2016 Indian Curry
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable website
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  other-modules: Config
               , Website.News
               , Website.Utils
  build-depends:       base == 4.*,
                       hakyll == 4.9.*,
                       filepath
